# brain-skill

./: .releaserc.json  README.md  package-lock.json  package.json
.github/workflows/: release.yml
brain/: SKILL.md
brain/assets/: README.md
brain/assets/brain-template/: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  pyproject.toml
brain/assets/brain-template/areas/: AGENTS.md  README.md
brain/assets/brain-template/areas/example-area/: AGENTS.md  README.md
brain/assets/brain-template/areas/template-area/: AGENTS.md  README.md
brain/assets/brain-template/projects/: AGENTS.md  README.md
brain/assets/brain-template/projects/example-project/: AGENTS.md  README.md
brain/assets/brain-template/projects/template-project/: AGENTS.md  README.md
brain/assets/brain-template/resources/: AGENTS.md  README.md  python-environment.md  tooling.md
brain/assets/brain-template/scripts/: AGENTS.md  README.md
brain/assets/brain-template/zettelkasten/: AGENTS.md  README.md  Zettelkasten.md  _template.md  template-zettel.md
docs/: release-notes.md
